--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+.DS_Store
+*.cywrk.*
+*.cyprj.*
+*.cycdx
+*.cyfit
+*.rpt
+*.uvopt
+*.uvproj
+*_timing.html
+*.cydsn/codegentemp
+*.cydsn/CortexM3
+*.zip
+
 # Object files
 *.o
 *.ko
